// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/ActionBar Dev 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__back"
    >
      <button
        aria-label="Back to home"
        className="fd-button fd-button--transparent fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-left-arrow"
          role="img"
        />
      </button>
    </div>
    <div
      className="fd-action-bar__title"
    >
      <h2
        className="fd-title fd-title--h2"
      >
        Page Title
      </h2>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description fd-action-bar__description--back"
  >
    Action Bar description
  </p>
</div>
`;

exports[`Storyshots Component API/ActionBar No Actions 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__title"
    >
      <h3
        className="fd-title fd-title--h3"
      >
        Page Title
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ActionBar No Back Button 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__title"
    >
      <h3
        className="fd-title fd-title--h3"
      >
        Page Title
      </h3>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description"
  >
    Action Bar Description
  </p>
</div>
`;

exports[`Storyshots Component API/ActionBar No Description 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__title"
    >
      <h3
        className="fd-title fd-title--h3"
      >
        Page Title
      </h3>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ActionBar No Styles 1`] = `
<div
  className="xxx-action-bar"
>
  <div
    className="xxx-action-bar__header"
  >
    <div
      className="xxx-action-bar__back"
    >
      <button
        aria-label="Back to home"
        className="xxx-button xxx-button--transparent xxx-button--compact"
        onClick={[Function]}
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-left-arrow"
          role="img"
        />
      </button>
    </div>
    <div
      className="xxx-action-bar__title"
    >
      <h3
        className="xxx-title xxx-title--h3"
      >
        Page Title
      </h3>
    </div>
    <div
      className="xxx-action-bar__actions"
    >
      <button
        className="xxx-button"
        type="button"
      >
        <span
          className="xxx-button__text"
        >
          Button
        </span>
      </button>
      <button
        className="xxx-button xxx-button--emphasized"
        type="button"
      >
        <span
          className="xxx-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <p
    className="xxx-action-bar__description xxx-action-bar__description--back"
  >
    Action Bar Description
  </p>
</div>
`;

exports[`Storyshots Component API/ActionBar Primary 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__back"
    >
      <button
        aria-label="Back to home"
        className="fd-button fd-button--transparent fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--navigation-left-arrow"
          role="img"
        />
      </button>
    </div>
    <div
      className="fd-action-bar__title"
    >
      <h3
        className="fd-title fd-title--h3"
      >
        Page Title
      </h3>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button
        className="fd-button"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
      <button
        className="fd-button fd-button--emphasized"
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <p
    className="fd-action-bar__description fd-action-bar__description--back"
  >
    Action Bar Description
  </p>
</div>
`;

exports[`Storyshots Component API/ActionBar With a ContextualMenu 1`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__header"
  >
    <div
      className="fd-action-bar__title"
    >
      <h3
        className="fd-title fd-title--h3"
      >
        Page Title
      </h3>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="More actions"
              className="fd-button fd-button--transparent"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <i
                aria-hidden={true}
                className="sap-icon--vertical-grip"
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    className="fd-action-bar__description"
  >
    Action Bar Description
  </p>
</div>
`;
